<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_elem_margin"
        android:gravity="center_horizontal"
        android:text="@string/database_options"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/query_db_tv"
        style="@style/database_option_style"
        android:text="@string/query_db" />

    <TextView
        android:id="@+id/insert_tv"
        style="@style/database_option_style"
        android:text="@string/insert_into_db" />

    <TextView
        android:id="@+id/delete_tv"
        style="@style/database_option_style"
        android:text="@string/delete_from_db" />

    <TextView
        android:id="@+id/update_tv"
        style="@style/database_option_style"
        android:text="@string/update_records" />

</LinearLayout>
