<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/record_style"
            android:text="@string/capital_id"
            android:layout_weight="2"/>

        <TextView
            style="@style/record_style"
            android:text="@string/country_id"
            android:layout_weight="2"/>

        <TextView
            style="@style/record_style"
            android:text="@string/capital_name"
            android:layout_weight="4"/>

        <TextView
            style="@style/record_style"
            android:text="@string/capital_population"
            android:layout_weight="3"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/capital_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>