<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/record_style"
            android:layout_weight="1"
            android:text="@string/language_id"/>

        <TextView
            style="@style/record_style"
            android:layout_weight="5"
            android:text="@string/language_name"/>

        <TextView
            style="@style/record_style"
            android:layout_weight="3"
            android:text="@string/native_speakers"/>

        <TextView
            style="@style/record_style"
            android:layout_weight="5"
            android:text="@string/language_family"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/languages_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>